# vision-encoder-experiment

./: .gitignore  README.md  main.py  plot_masking_all.py  process_originals.py  pyproject.toml
datasets/: __init__.py  loader.py
experiments/: masking.py  tsne.py
models/: __init__.py  clip.py  dino.py  dinov2.py  ijepa.py  llava.py  mae.py  mae_ft.py  nepa.py  qwen2vl.py  registry.py  resnet.py  siglip.py  simclr.py  vit_sup.py
tasks/: __init__.py  attention_masking.py  cka.py  clip_masking_alignment.py  clock_tsne.py  color_tsne.py  finetune.py  fragment_segmentation.py  knn.py  linear_probe.py  masking.py  reconstruction.py  tsne.py
wrappers/: __init__.py  encoder.py
